cleaning up the CSS, getting things into a default state.

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,65 @@
-.App {
-  text-align: center;
+/*.App {*/
+  /*text-align: center;*/
+/*}*/
+
+/*.App-logo {*/
+  /*animation: App-logo-spin infinite 20s linear;*/
+  /*height: 80px;*/
+/*}*/
+
+/*.App-header {*/
+  /*background-color: #222;*/
+  /*height: 150px;*/
+  /*padding: 20px;*/
+  /*color: white;*/
+/*}*/
+
+/*.App-title {*/
+  /*font-size: 1.5em;*/
+/*}*/
+
+/*.App-intro {*/
+  /*font-size: large;*/
+/*}*/
+
+/*@keyframes App-logo-spin {*/
+  /*from { transform: rotate(0deg); }*/
+  /*to { transform: rotate(360deg); }*/
+/*}*/
+
+
+
+
+#react-content *{
+  font-family: Arial;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
+#react-content .products .icon {
+  font-family: 'Icons';
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
+/*.app-content.ui.text.container {*/
+  /*margin-top: 65px;*/
+/*}*/
+
+.main.container {
+  margin-top: 7em;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.ui.positive.basic.button {
+  display: block;
+  margin-top: 10px;
+}
+
+.btn-reset {
+  background: none;
+  border: 0;
+  color: inherit;
+  /* cursor: default; */
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  box-sizing: content-box;
 }
